# turn-craft

./: .dockerignore  .env.example  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  LOBBY_REDESIGN_SPEC.md  Makefile  README.md  UI_AUDIT_REPORT.md  docker-compose.yml
.sqlx/: query-123fc1884f56e560d078138661d77bd779f01a65cd863e6e123ddf38fb5f6364.json  query-5c632e11442e98135ef961f5ab551619d865eaf41d1ebe95a78823c99f9d5180.json  query-5de2adc92bdf9d0257707d6ea04b185e25f008a4b5cb9498b95b142ff808666d.json  query-9afd1ab2f9a9ad6647856f5ff2e7894a4899857b31e4731f624efe05f5db862a.json  query-ae6446d9845bda9c70e5c51951be50f2a44f98a8ae3a18d1c239583fe1bd0113.json  query-cc1e091bf5e46e6d98baf94bac6d9ac1ca1845eff7c4b8196dd2efb93fd9e0dd.json  query-f1058a333fd896e62d2195c23955bc56d09c020bd5a6bfa8a18dbf4771808fe2.json
backend/: Cargo.toml
backend/migrations/: 20260615021321_init_db.sql
backend/src/: app.rs  config.rs  error.rs  event_store.rs  lib.rs  main.rs  persistence.rs
backend/src/ai/: client.rs  config_repo.rs  env.rs  error.rs  insights.rs  listener.rs  mod.rs
backend/src/application/: mod.rs
backend/src/auth/: error.rs  jwt.rs  middleware.rs  mod.rs
backend/src/games/: blackjack.rs  factory.rs  lincoln.rs  mod.rs  texas_holdem.rs  werewolf.rs
backend/src/handlers/: achievements.rs  ai_config.rs  ai_insights.rs  auth.rs  game.rs  health.rs  leaderboard.rs  mod.rs  room.rs  ws.rs
backend/src/infrastructure/: mod.rs
backend/src/network/: manager.rs  mod.rs  room.rs
backend/src/room/: actor.rs  error.rs  invite.rs  mod.rs  model.rs  repository.rs  service.rs  supervisor.rs
backend/src/user/: error.rs  model.rs  repository.rs
backend/tests/: api_test.rs  core_regression.rs  e2e_game_flow.rs  texas_holdem_integration.rs  texas_holdem_test.rs  ui_path_regression.rs  v10_blackjack_engine.rs  v10_blackjack_factory.rs  v6_ai_style.rs  v6_insights_basic.rs  v7_insights_llm.rs  v8_invite.rs  v8_player_event.rs  v8_spectator.rs  v9_achievements.rs  v9_leaderboard.rs  werewolf_test.rs
front/: Cargo.toml  Dioxus.toml  test_dioxus_dynamic.rs
front/assets/: STYLE_GUIDE.md  about.css  game.css  history.css  lobby.css  login.css  main.css  poker.css  profile.css  public.css  replay.css  settings.css  tailwind.css
front/src/: api.rs  icons.rs  main.rs
front/src/games/: mod.rs  registry.rs
front/src/games/lincoln/: actions.rs  mod.rs
front/src/games/texas_holdem/: mod.rs
front/src/games/werewolf/: mod.rs
front/src/routes/: about.rs  game.rs  game_actions.rs  history.rs  layout.rs  lobby.rs  lobby_actions.rs  login.rs  mod.rs  profile.rs  public.rs  replay.rs  settings.rs  settings_actions.rs
front/src/services/: connection.rs  http_api.rs  mod.rs  websocket.rs
front_next/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
front_next/src/: App.tsx  main.tsx
front_next/src/__tests__/: v10_blackjack_gameview.test.tsx  v6_replay.test.tsx  v7_share.test.tsx  v9_game_end_panel.test.tsx  v9_leaderboard.test.tsx  v9_profile.test.tsx
front_next/src/api/: aiConfig.ts  auth.ts  client.ts  rooms.ts
front_next/src/components/: ConnectionStatus.tsx  (+4 more)
platform_core/: Cargo.toml
platform_core/src/: error.rs  lib.rs  traits.rs
src/platform_core/: traits.rs
tests/: client_test.rs  lincoln_test.rs  room_test.rs
(+38 files in other folders)
