[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
platform_core = {path = "../platform_core"}
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
axum = { version = "0.8.9", features = ["ws", "query"] }
dashmap = "6.2.1"
futures-util = "0.3.32"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

tokio-tungstenite = "0.26" # 强大的 Tokio 生态 WebSocket 客户端
