[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
platform_core = {path = "../platform_core"}
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
axum = { version = "0.8.9", features = ["ws", "query"] }
dashmap = "6.2.1"
futures-util = "0.3.32"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

tokio-tungstenite = "0.26" # 强大的 Tokio 生态 WebSocket 客户端
thiserror = "2.0.18"
anyhow = "1.0.102"
uuid = {version = "1.23.3", features = ["v4"]}
chrono = {version = "0.4.45", features = ["serde"]}
sqlx = { 
    version = "0.9", 
    features = [
        "runtime-tokio",      # 1. 指定异步运行时
        "tls-rustls-ring",    # 2. 指定 TLS 加密后端（替代了原来的 rustls）
        "postgres",           # 你的数据库类型
        "sqlite",
        "macros",             # 编译时检查宏
        "migrate",            # 数据库迁移
        "uuid",               # 按需添加
        "chrono"              # 按需添加
    ] 
}
async-trait = "0.1.89"
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
