[package]
name = "front"
version = "0.1.0"
authors = ["zeng <z15188247@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
gloo-net = { version = "0.6", features = ["websocket", "http"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "console",
    "CloseEvent",
    "MessageEvent",
    "Clipboard",
    "Navigator",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Storage",
] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[dev-dependencies]
dioxus-ssr = "0.7.9"
